--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -43,6 +43,8 @@
         <file alias="debugwindow">res/icons/debugwindow.png</file>
         <file alias="staking_off">res/icons/staking_off.png</file>
         <file alias="staking_on">res/icons/staking_on.png</file>
+        <file alias="smile">res/icons/smile-48.png</file>
+        <file alias="sad">res/icons/sad-48.png</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="about">res/images/about.png</file>
