--- a/src/qt/forms/quantpage.ui
+++ b/src/qt/forms/quantpage.ui
@@ -21,6 +21,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <item>
         <widget class="QCustomPlot" name="depthPlot" native="true">
          <property name="sizePolicy">
@@ -62,6 +65,31 @@
          </property>
          <property name="styleSheet">
           <string notr="true">#customPlot { background-color: #202020; }</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCustomPlot" name="volumePlot" native="true">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>300</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>150</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">#volumePlot { background-color: #202020; }</string>
          </property>
         </widget>
        </item>
