--- a/src/qt/forms/profitexplorerpage.ui
+++ b/src/qt/forms/profitexplorerpage.ui
@@ -254,6 +254,31 @@
        </item>
       </layout>
      </item>
+     <item>
+      <widget class="QCustomPlot" name="velocityPlot" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>300</width>
+         <height>100</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>150</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">#velocityPlot { background-color: #202020; }</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
