--- a/src/qt/forms/tabbedconsolepage.ui
+++ b/src/qt/forms/tabbedconsolepage.ui
@@ -20,6 +20,9 @@
    <property name="spacing">
     <number>0</number>
    </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
    <property name="topMargin">
     <number>0</number>
    </property>
@@ -36,11 +39,14 @@
        <property name="styleSheet">
         <string notr="true"/>
        </property>
+       <property name="tabPosition">
+        <enum>QTabWidget::South</enum>
+       </property>
        <property name="tabShape">
         <enum>QTabWidget::Rounded</enum>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
        <property name="documentMode">
         <bool>true</bool>
