--- a/src/qt/forms/profitexplorerpage.ui
+++ b/src/qt/forms/profitexplorerpage.ui
@@ -86,6 +86,42 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QLabel" name="label_3">
+         <property name="styleSheet">
+          <string notr="true">#label_3 { color: #ffffff; }</string>
+         </property>
+         <property name="text">
+          <string>Preferred Block Size</string>
+         </property>
+         <property name="margin">
+          <number>5</number>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSpinBox" name="blockSizeSpinBox">
+         <property name="minimum">
+          <number>10</number>
+         </property>
+         <property name="maximum">
+          <number>32000</number>
+         </property>
+         <property name="value">
+          <number>500</number>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="optimizeCheckBox">
+         <property name="styleSheet">
+          <string notr="true">#optimizeCheckBox { color: #4CFF00; margin-left:5px;}</string>
+         </property>
+         <property name="text">
+          <string>Auto-Optimize</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
      <item>
